--- a/blog/static/css/bar_bttns.css
+++ b/blog/static/css/bar_bttns.css
@@ -4,7 +4,7 @@
 	background-color: #b3dbff;
     border-color: #b3dbff;
     color: #003366;
-    width: 19em;
+    width: 18.75em;
     /* padding: 1em 3em;  */
 }
 
